--- a/app.config
+++ b/app.config
@@ -2,7 +2,7 @@
   {lager, [
     {handlers, [
       {lager_console_backend, [
-          % debug,
+          debug,
           info
       ]},
       {lager_file_backend, [
