--- a/app.config
+++ b/app.config
@@ -1,13 +1,11 @@
 [
   {lager, [
     {handlers, [
-      {lager_console_backend, [
-          % debug,
-          info
+      {lager_file_backend, [
+        {file, "log/error.log"}, {level, error}
       ]},
       {lager_file_backend, [
-        {"log/error.log", error, 10485760, "$D0", 5},
-        {"log/console.log", info, 10485760, "$D0", 5}
+        {file, "log/console.log"}, {level, info}
       ]}
     ]}
   ]},
